--- a/SmartCoreAI/index.html
+++ b/SmartCoreAI/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Guida completa a SmartCoreAI - Libreria Delphi per integrazione AI">
     <meta name="color-scheme" content="light dark">
     <title>SmartCoreAI - Guida</title>
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
